[gd_scene load_steps=18 format=3 uid="uid://bpg4nlx854do8"]

[ext_resource type="PackedScene" uid="uid://blsi5vt1dgu28" path="res://Enemies/boss_enemy.tscn" id="1_yma5i"]
[ext_resource type="Script" path="res://Enemies/bosses/cow_boss_enemy.gd" id="2_hywoy"]
[ext_resource type="Shader" path="res://Enemies/Shaders/simple_enemy.gdshader" id="2_n8eya"]
[ext_resource type="Texture2D" uid="uid://mu3nmro8ud86" path="res://Art/3rdParty/Sprout Lands - Sprites - Basic pack/Characters/Free Cow Sprites.png" id="4_luqp8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mmu5"]
resource_local_to_scene = true
shader = ExtResource("2_n8eya")
shader_parameter/color = Color(1, 0.694118, 0.996078, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fwium"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jgrfc"]
radius = 9.0

[sub_resource type="Animation" id="Animation_ak8i5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l5yrt"]
resource_name = "cow_idle_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_epfsy"]
resource_name = "cow_walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at0io"]
_data = {
"RESET": SubResource("Animation_ak8i5"),
"cow_idle_right": SubResource("Animation_l5yrt"),
"cow_walk_right": SubResource("Animation_epfsy")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hssk"]
animation = &"cow_idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aoulc"]
animation = &"cow_walk_right"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d1rty"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0yxk8"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3bsw6"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vjd6o"]
states/End/position = Vector2(829, 77)
states/Start/position = Vector2(190, 85)
states/cow_idle_right/node = SubResource("AnimationNodeAnimation_8hssk")
states/cow_idle_right/position = Vector2(394, 85)
states/cow_walk_right/node = SubResource("AnimationNodeAnimation_aoulc")
states/cow_walk_right/position = Vector2(615, 85)
transitions = ["Start", "cow_idle_right", SubResource("AnimationNodeStateMachineTransition_d1rty"), "cow_idle_right", "cow_walk_right", SubResource("AnimationNodeStateMachineTransition_0yxk8"), "cow_walk_right", "cow_idle_right", SubResource("AnimationNodeStateMachineTransition_3bsw6")]

[node name="CowBossEnemy" instance=ExtResource("1_yma5i")]
script = ExtResource("2_hywoy")
charge_cooldown = 3.0
charge_speed = 150.0
max_time_in_charge_cooldown = 3.0

[node name="Sprite2D" parent="." index="0"]
material = SubResource("ShaderMaterial_5mmu5")
texture = ExtResource("4_luqp8")

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_fwium")

[node name="CollisionShape2D" parent="DamageArea" index="0"]
shape = SubResource("CircleShape2D_jgrfc")

[node name="Animations" type="Node" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations" index="0"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_at0io")
}

[node name="AnimationTree" type="AnimationTree" parent="Animations" index="1"]
tree_root = SubResource("AnimationNodeStateMachine_vjd6o")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="ChargeTimer" type="Timer" parent="Timers" index="3"]
wait_time = 3.0
one_shot = true

[node name="MaxTimeInChargeTimer" type="Timer" parent="Timers" index="4"]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timers/ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="Timers/MaxTimeInChargeTimer" to="." method="_on_max_time_in_charge_timer_timeout"]
